syntax = "proto3";
package main;

import "firebase_rules_options.proto";

option (google.firebase.rules.firebase_rules).full_package_names = true;

enum RenewableAskHistoryType {
  UNKNOWN = 0;
  PRIMARY = 1;
  SECONDARY = 2;
}

message RenewableAskHistory {
  string id = 1;
  RenewableAskHistoryType type = 2;
  string account_id = 3;
  string price_ujpy = 4;
  string amount_uspx = 5;
  bool is_accepted = 6;
  string contract_price_ujpy = 7;
  bool is_auto_order = 8;
  string auto_order_fee_ujpy = 9;
}
