syntax = "proto3";
package main;

import "firebase_rules_options.proto";

option (google.firebase.rules.firebase_rules).full_package_names = true;

message RenewableBidHistory {
  string id = 1;
  string account_id = 2;
  string price_ujpy = 3;
  string amount_uspx = 4;
  bool is_accepted = 5;
  string contract_price_ujpy = 6;
}
