syntax = "proto3";
package main;

import "firebase_rules_options.proto";
import "google/protobuf/timestamp.proto";

option (google.firebase.rules.firebase_rules).full_package_names = true;

message SinglePriceRenewableSettlement {
  string id = 1;
  string price_ujpy = 2;
  string amount_uspx = 3;
  //google.protobuf.Timestamp date = 4;
}
